--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -1,4 +1,147 @@
 /* Overriding styling for ui-widget for autocomplete */
+
+/*shivani*/
+.venue_includes {
+	width: 80%;
+	margin: 0 auto;
+	position: relative;
+	bottom: 100px;
+	z-index: 2;
+	background: #EE3E20;
+	-webkit-transition: bottom 0.5s;
+	-moz-transition: bottom 0.5s;
+	-o-transition: bottom 0.5s;
+	-ms-transition: bottom 0.5s;
+}
+
+.venue_includes.slide-down {
+	bottom: 0px;
+	-webkit-transition: bottom 0.5s;
+	-moz-transition: bottom 0.5s;
+	-o-transition: bottom 0.5s;
+	-ms-transition: bottom 0.5s;
+}
+
+.venue_includes h2 {
+	width: 100%;
+	text-align: center;
+	color: #fff;
+	margin-top: 0px;
+	margin-bottom: 23px;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+}
+
+.venue_includes hr {
+	width: 10%;
+	border-top: 3px solid #ea8259;
+	color: #ea8259;
+}
+.venue_includes p {
+	width: 80%;
+	color: #fff;
+	margin: 0 auto;
+	margin-bottom: 17px;
+}
+
+.main-heading {
+	margin-top: -38px;
+}
+.welcome {
+	padding-top: 0;
+	padding-bottom: 43px;
+}
+.welcome h2 {
+	color: #262626;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.8);
+}
+.welcome p {
+	color: #262626;
+	line-height: 27px;
+	font-size: 16px;
+	margin-top: 25px;
+}
+.all_Services {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.6),rgba(0, 0, 0, 0.6)), url('/images/services_bg.jpg');
+	background-repeat: no-repeat !important;
+	background-size: cover !important;
+	background-position: center center;
+	/* height: 667px; */
+}
+
+.services_text > .h2 {
+	color: #fff;
+	margin-bottom: 45px;
+}
+
+.home-page-icons {
+	margin-bottom: 17px;
+}
+.home-page-icons h3 {
+	color: #fff;
+}
+.home-page-icons p {
+	color: #fff;
+}
+
+.portfolio_section {
+	background-image: linear-gradient(rgba(0, 0, 0, 0.72),rgba(0, 0, 0, 0.83)), url('/images/portfolio_bg.jpg');
+	background-repeat: no-repeat !important;
+	background-size: cover !important;
+	background-position: center center;
+}
+
+.feedback_section {
+	padding: 75px 0;
+	width: 100%;
+	background-image: url('/images/world-map-4.png');
+	background-repeat: no-repeat !important;
+	background-size: cover !important;
+	background-position: center center;
+}
+
+.services_text  hr {
+	width: 10%;
+	border-top: 3px solid #848484;
+	margin-top: 32px;
+	margin-bottom: 50px;
+}
+
+.item blockquote {
+	border-left: none;
+	margin: 0;
+}
+
+.item blockquote img {
+	margin-bottom: 10px;
+}
+
+.item blockquote p:before {
+	content: "\f10d";
+	font-family: 'Fontawesome';
+	float: left;
+	margin-right: 10px;
+}
+
+.customerssay-swiper-container .swiper-pagination-bullet-active {
+	background: #df4507 !important;
+	opacity: 1;
+}
+
+.customerssay-swiper-container .swiper-pagination-bullet {
+	background: #c0c0c0;
+	opacity: 1;
+}
+
+blockquote {
+	border-left: none;
+}
+
+blockquote .col-sm-9 {
+	text-align: left;
+}
+
+/*shivani*/
+
 .ui-widget {
 	font-family: OpenSans-Regular, Arial, Helvetica, sans-serif;
 	font-size: 1.2em;
@@ -11,45 +154,56 @@
 	position: relative;
 	width: 100%;
 	color: #ffffff;
-	height: 500px;
-			background-repeat: no-repeat !important;
+	height: 100vh;
+	background-repeat: no-repeat !important;
 	background-size: cover !important;
 	background-position: center center;
-	z-index: 2;	
+	z-index: 2;
 }
 
+.homePage #coverPage {
+	height: 100vh;
+}
 
-#coverPage .cover-swiper-container{
+.dataPage #coverPage {
+	height: 65vh !important;
+	-webkit-transition: height 0.5s 1s;
+	-moz-transition: height 0.5s 1s;
+	-o-transition: height 0.5s 1s;
+	-ms-transition: height 0.5s 1s;
+}
+
+#coverPage .cover-swiper-container {
 	height: 100%;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide{
-		background-repeat: no-repeat !important;
+#coverPage .cover-swiper-wrapper .cover-swiper-slide {
+	background-repeat: no-repeat !important;
 	background-size: cover !important;
 	background-position: center center !important;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(1){
+#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(1) {
 	background-image: url('/images/main_cover.jpg') !important;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(2){
+#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(2) {
 	background-image: url('/images/venues_cover.jpg') !important;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(3){
+#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(3) {
 	background-image: url('/images/caterer_cover.jpg') !important;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(4){
+#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(4) {
 	background-image: url('/images/decor_cover.jpg') !important;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(5){
+#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(5) {
 	background-image: url('/images/photography_cover.jpg') !important;
 }
 
-#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(6){
+#coverPage .cover-swiper-wrapper .cover-swiper-slide:nth-child(6) {
 	background-image: url('/images/rentals_cover.jpg') !important;
 }
 
@@ -61,6 +215,7 @@
 	height: 100%;
 	width: 100%;
 	z-index: 1;
+	background: rgba(25, 25, 25, 0.57);
 }
 
 #coverPage .content-wrapper .container {
@@ -130,18 +285,18 @@
 	font-size: 24px;
 }
 
-#coverPage #searchedText{
+#coverPage #searchedText {
 	border-radius: 0px;
 }
 
-#coverPage .clear-searchedText{
+#coverPage .clear-searchedText {
 	position: absolute;
-    color: #f37254;
-    top: 0px;
-    right: 4px;
-    font-size: 24px;
-    line-height: 46px;
-    cursor: pointer;
+	color: #f37254;
+	top: 0px;
+	right: 4px;
+	font-size: 24px;
+	line-height: 46px;
+	cursor: pointer;
 }
 
 .lp-sprite {
@@ -176,9 +331,9 @@
 	background-position: -414px 0px;
 }
 
-.home-page-icons{
-	padding-top: 10px;
-	padding-bottom: 10px;
+.home-page-icons {
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .portfolioSlider .swiper-container {
@@ -197,228 +352,281 @@
 }
 
 /* Recently Added section css */
-.recently-added-list{
+.recently-added-list {
 
 }
 
-.recently-added-section{
+.recently-added-section {
 	margin-top: 10px;
 }
 
-.recently-added-category-name{
-	font-family:'OpenSans-Semibold';
-	    color: #2d2d2d;
-    text-shadow: 0 1px 1px #fff;
+.recently-added-category-name {
+	font-family: 'OpenSans-Semibold';
+	color: #2d2d2d;
+	text-shadow: 0 1px 1px #fff;
 	text-transform: uppercase;
 }
 
-.recently-added-list li{
-    padding-top: 5px;
-    font-family: 'OpenSans-Semibold';
-    padding-bottom: 5px;
+.recently-added-list li {
+	padding-top: 5px;
+	font-family: 'OpenSans-Semibold';
+	padding-bottom: 5px;
 }
 
-.recently-added-list li a{
+.recently-added-list li a {
 	color: #656565;
 }
 
-.recently-added-list li a:hover{
+.recently-added-list li a:hover {
 	text-decoration: underline;
 }
 
-.view-event-btn{
+.view-event-btn {
 	position: absolute;
-    left: 100px;
-    top: 250px;
+	left: 100px;
+	top: 250px;
 }
 
 /* Sub Category Styling  */
 /*.subcategory-swiper-container.CATERER,
-.subcategory-swiper-container.DECORATOR,
-.subcategory-swiper-container.PHOTOGRAPHER,
-.subcategory-swiper-container.ENTERTAINMENT,
-.subcategory-swiper-container.OTHERS{
-	display: none;
+ .subcategory-swiper-container.DECORATOR,
+ .subcategory-swiper-container.PHOTOGRAPHER,
+ .subcategory-swiper-container.ENTERTAINMENT,
+ .subcategory-swiper-container.OTHERS{
+ display: none;
+ }
+
+ .subcategory-icon-outer-background{
+ display: block;
+ height: 120px;
+ width: 90px;
+ margin-left: auto;
+ margin-right: auto;
+ }
+
+ .subcategory-swiper-container{
+ background: rgba(255,255,255,1);
+ }
+
+ .subcategory-icon-border-inner-background{
+ border: 2px solid #f37254;
+ border-radius: 50%
+ }
+
+ .subcategory-icon-inner-background{
+ background: #EEEEEE;
+ border-radius: 50%;
+ width: 85px;
+ height: 85px;
+ padding: 5px;
+ }
+ */
+
+.subcategory-icon-text {
+	text-align: center;
+	text-transform: uppercase;
+	font-family: openSans-bold;
+	color: #FFFFFF;
+	position: absolute;
+	width: 100%;
+	top: 125px;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.8);
 }
 
-
-.subcategory-icon-outer-background{
-	display: block;
-	height: 120px;
-	width: 90px;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-.subcategory-swiper-container{
-	background: rgba(255,255,255,1);
-}
-
-.subcategory-icon-border-inner-background{
-	    border: 2px solid #f37254;
-    border-radius: 50%
-}
-
-
-
-.subcategory-icon-inner-background{
-	    background: #EEEEEE;
-border-radius: 50%;	
-    width: 85px;
-    height: 85px;
-    padding: 5px;
-}
-*/
-
-.subcategory-icon-text{
-    text-align: center;
-    margin-top: 11px;
-    text-transform: uppercase;
-    font-family: openSans-bold;
-    color: #656565;
-    display: none;
-}
-
-.subcategory-icon{
-	background-image: url('/images/subcategory-icons.png');
+.subcategory-icon {
+	/*background-image: url('/images/subcategory-icons.png');*/
 	background-repeat: no-repeat;
-	height: 150px;
+	height: 200px;
 	width: 200px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
 /* Venue subcategory */
-.subcategory-icon.hotels{
-	background-position: -420px 0px;
+.subcategory-icon.hotels {
+	background-image: url('/images/subcategories/hotels.png');
 }
 
-.subcategory-icon.restaurants{
-	background-position: -1050px 0px;
+.subcategory-icon.restaurants {
+	background-image: url('/images/subcategories/restaurants.png');
 }
 
-.subcategory-icon.marriage-palaces{
-	background-position: -630px 0px;
+.subcategory-icon.marriage-palaces {
+	background-image: url('/images/subcategories/marriagepalace.png');
 }
-.subcategory-icon.banquet-halls{
-	background-position: 0px 0px;
-}
-
-.subcategory-icon.clubs{
-	background-position: -210px 0px;
+.subcategory-icon.banquet-halls {
+	background-image: url('/images/subcategories/banquethall.png');
 }
 
-.subcategory-icon.others{
-	background-position: -840px 0px;
+.subcategory-icon.clubs {
+	background-image: url('/images/subcategories/club.png');
+}
+
+.subcategory-icon.others {
+	background-image: url('/images/subcategories/others.png');
 }
 
 /* Caterer subcategory */
 
-.subcategory-icon.veg{
-	background-position: -449px -5px;
+.subcategory-icon.veg {
+	background-image: url('/images/subcategories/veg.png');
 }
 
-.subcategory-icon.non-veg{
-	background-position: -373px -301px;
+.subcategory-icon.non-veg {
+	background-image: url('/images/subcategories/nonveg.png');
 }
 
-.subcategory-icon.bartender{
-	background-position: -5px -79px;
+.subcategory-icon.bartender {
+	background-image: url('/images/subcategories/bartender.png');
 }
 
 /* Decorator subcategory */
-.subcategory-icon.tenting{
-	background-position: -301px -375px;
+.subcategory-icon.tenting {
+	background-image: url('/images/subcategories/tenting.png');
 }
-.subcategory-icon.lighting{
-	background-position: -5px -301px;
+.subcategory-icon.lighting {
+	background-image: url('/images/subcategories/lighting.png');
 }
-.subcategory-icon.floral{
-	background-position: -79px -227px;
-
+.subcategory-icon.floral {
+	background-image: url('/images/subcategories/floral.png');
 }
-.subcategory-icon.candles{
-	background-position: -301px -79px;
+.subcategory-icon.candles {
+	background-image: url('/images/subcategories/candles.png');
 }
-.subcategory-icon.balloons{
-	background-position: -153px -5px;
+.subcategory-icon.balloons {
+	background-image: url('/images/subcategories/balloons.png');
 }
 
 /* Photographer subcategory */
-.subcategory-icon.photography{
-	background-position: -227px -79px;
+.subcategory-icon.photography {
+	background-image: url('/images/subcategories/photography.png');
 }
-.subcategory-icon.videography{
-	background-position: -449px -79px;
+.subcategory-icon.videography {
+	background-image: url('/images/subcategories/videography.png');
 }
 
 /* Entertainment subcategory */
-.subcategory-icon.dj{
-	background-position: -301px -153px;
+.subcategory-icon.dj {
+	background-image: url('/images/subcategories/dj.png');
 }
-.subcategory-icon.singers{
-	background-position: -227px -375px;
+.subcategory-icon.singers {
+	background-image: url('/images/subcategories/singers.png');
 }
-.subcategory-icon.dancers{
-	background-position: -227px -153px;
+.subcategory-icon.dancers {
+	background-image: url('/images/subcategories/dancers.png');
 }
-.subcategory-icon.musicians{
-	background-position: -299px -301px;
+.subcategory-icon.musicians {
+	background-image: url('/images/subcategories/musicians.png');
 }
-.subcategory-icon.choreographers{
-	background-position: -375px -79px;
+.subcategory-icon.choreographers {
+	background-image: url('/images/subcategories/choreographers.png');
 }
-.subcategory-icon.anchors{
-	background-position: -79px -5px;
+.subcategory-icon.anchors {
+	background-image: url('/images/subcategories/anchors.png');
 }
-.subcategory-icon.fireworks{
-	background-position: -5px -227px;
+.subcategory-icon.fireworks {
+	background-image: url('/images/subcategories/fireworks.png');
 }
-.subcategory-icon.other-acts{
-	background-position: -79px -375px;
+.subcategory-icon.other-acts {
+	background-image: url('/images/subcategories/others.png');
 }
 
 /* Others subcategory */
-.subcategory-icon.makeup-artist{
-	background-position: -79px -301px;
+.subcategory-icon.makeup-artist {
+	background-image: url('/images/subcategories/makeup.png');
 }
-.subcategory-icon.jewellery{
-	background-position: -375px -227px;
+.subcategory-icon.jewellery {
+	background-image: url('/images/subcategories/jewellery.png');
 }
-.subcategory-icon.invites{
-	background-position: -301px -227px;
+.subcategory-icon.invites {
+	background-image: url('/images/subcategories/invites.png');
 }
-.subcategory-icon.cab-services{
-	background-position: -79px -79px;
+.subcategory-icon.cab-services {
+	background-image: url('/images/subcategories/banquethall.png');
 }
-.subcategory-icon.ecoverage{
-	background-position: -375px -153px;
+.subcategory-icon.ecoverage {
+	background-image: url('/images/subcategories/banquethall.png');
 }
-.subcategory-icon.gift-shops{
-	background-position: -153px -227px;
+.subcategory-icon.gift-shops {
+	background-image: url('/images/subcategories/banquethall.png');
 }
-.subcategory-icon.trousseau-packer{
-	background-position: -375px -375px;
+.subcategory-icon.trousseau-packer {
+	background-image: url('/images/subcategories/banquethall.png');
 }
-.subcategory-icon.accessories{
-	background-position: -5px -5px;
+.subcategory-icon.accessories {
+	background-image: url('/images/subcategories/banquethall.png');
 }
-.subcategory-icon.mehendi-artist{
-	background-position: -227px -301px;
+.subcategory-icon.mehendi-artist {
+	background-image: url('/images/subcategories/banquethall.png');
 }
-.subcategory-icon.clothing{
-	background-position: -5px -153px;
-	/*background-position: -79px -153px;*/
-}
-
-.subcategory-heading{
-	    margin: 0px;
-    color: #656565;
-    margin-left: 15px;
-    margin-right: 15px;
-    margin-bottom: 15px;
+.subcategory-icon.clothing {
+	background-image: url('/images/subcategories/banquethall.png');
 }
 
+.subcategory-heading {
+
+	color: #ffffff;
+	width: 100%;
+	/*margin: 50px auto;*/
+	text-align: center;
+	margin-top: 40px;
+	font-weight: 600;
+	letter-spacing: 1px;
+}
+
+.subcategory-swiper-pagination .swiper-pagination-bullet {
+	background: #ffffff;
+	opacity: 1;
+}
+
+.subcategory-swiper-pagination .swiper-pagination-bullet-active {
+	opacity: 1;
+	background: #007aff;
+}
+
+.subcat-inline-btns {
+	margin-left: 0px !important;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	font-size: 22px;
+	color: #ffffff;
+	text-transform: uppercase;
+	text-shadow: 1px 1px 1px rgba(0,0,0,.8);
+}
+
+.radio label::before {
+	height: 22px;
+	width: 22px;
+	top: 5px;
+}
+
+.radio label::after {
+	width: 16px;
+	height: 16px;
+	top: 8px;
+	background: #f37254;
+}
+
+.radio label {
+	padding-left: 15px;
+}
+
+.subcat-row {
+	margin-right: auto;
+	margin-left: auto;
+	padding: 25px;
+}
+
+.help-text {
+	display: inline-block;
+	width: 16px;
+	height: 16px;
+	background: #cccccc;
+	color: #656565;
+	border-radius: 50%;
+	cursor: pointer;
+	font-size: 14px;
+}
 
 @media only screen and (min-width: 0px) and (max-width: 767px) {
 	#coverPage .home-search-btn {
@@ -428,32 +636,44 @@ border-radius: 50%;
 	#coverPage .home-search-box {
 		border-radius: 0px;
 	}
-	
-	
+
 	#coverPage .lp-select-city-text {
 		border-radius: 0px !important;
 	}
-	
-	#coverPage .lp-label-city,
-	#coverPage .lp-label-category{
+
+	#coverPage .lp-label-city, #coverPage .lp-label-category {
 		font-size: 16px;
 	}
-	
 
-.recently-added-list li a{
-	color: #337ab7;
-	font-family: 'OpenSans-Bold';
-	text-decoration: underline;
-}
+	.recently-added-list li a {
+		color: #337ab7;
+		font-family: 'OpenSans-Bold';
+		text-decoration: underline;
+	}
 
+	blockquote .col-sm-9 {
+		text-align: center;
+	}
 
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
-	.lp-category-dropdown{
-		font-size: 12px;
+	/*
+	 .lp-category-dropdown{
+	 font-size: 12px;
+	 }
+	 .lp-selected-category{
+	 font-size: 12px;
+	 }*/
+
+	#coverPage .home-search-btn {
+		padding: 11px 10px;
 	}
-	.lp-selected-category{
-		font-size: 12px;
+
+}
+
+@media only screen and (max-width: 768px) {
+	.dataPage #coverPage {
+		height: 80vh !important;
 	}
 }
