--- a/app/views/footer/footer.html
+++ b/app/views/footer/footer.html
@@ -1,6 +1,6 @@
 
 <footer class="col-xs-12" id ="footer">
-   <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1">
+   <div class="col-xs-12 col-sm-6 col-md-5 col-md-offset-1 footer_content">
       <a href='/' class="footer-logo-anchor">
       <span class="logo"><img class="img" src="/images/lp_main_logo.png" alt="LePartycious - Your Online Event Planner" title="LePartycious - Your Online Event Planner"/></span>
       </a>
@@ -30,7 +30,7 @@
          </li>
       </ul>
    </div>
-   <div class="col-xs-12 col-sm-6 col-md-3 col-md-offset-1">
+   <div class="col-xs-12 col-sm-6 col-md-2 col-md-offset-1">
       <div class="h4"> COMPANY</div>
       <div class="row">
          <div class="col-xs-12">
@@ -53,7 +53,7 @@
          </div>
       </div>
    </div>
-   <div class="col-xs-12 col-sm-6 col-md-2">
+   <div class="col-xs-12 col-sm-6 col-md-3">
       <div class="h4">NEED HELP?</div>
       <ul>
          <li>Call us on</li>
@@ -66,8 +66,9 @@
       </ul>
    </div>
    <div class="gap20"></div>
-   <div class="col-xs-12 lp-copyrights text-center">
+   
+</footer>
+<div class="col-xs-12 lp-copyrights text-center">
    	&copy; 2016 LePartycious ALL RIGHTS RESERVED
    </div>
-</footer>
 <div data-ng-include="'views/home/contactus.html'"></div>
