--- a/app/styles/detail.css
+++ b/app/styles/detail.css
@@ -1,3 +1,34 @@
+.detailPage #coverPage{
+	height: 500px;
+}
+/* Amendments made so as to support material datepicker inside a modal 
+.modal-open .md-datepicker-calendar-pane{
+	z-index: 1051;
+	position: fixed;
+}
+*/
+
+.btn-checkavail{
+	background-color: #f37254 !important;
+	box-shadow: 0 2px 10px 0 rgba(125,124,122,0.5) !important;
+	width: 100%;
+	margin-top: 20px;
+	border-color: #f37254 !important;
+	color: #ffffff !important;
+}
+
+.btn-checkavail:hover{
+	background-color: white !important;
+	color: #f37254 !important;
+	border-color: #f37254 !important;
+}
+
+#myModalLabel{
+	font-size: 20px;
+    text-shadow: 1px 1px 1px rgba(0,0,0,0.8);
+    color: #000000;
+}
+
 .details-container {
 	padding-top: 2em;
 	padding-bottom: 2em;
