--- a/app/views/detail/checkAvailability.html
+++ b/app/views/detail/checkAvailability.html
@@ -3,12 +3,12 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close"  ng-click="vm.closeAvailabilityForm();" aria-hidden="true">×</button>
-        <h3 id="myModalLabel">Booking Enquiry</h3>
+        <h3 id="myModalLabel">BOOKING ENQUIRY FOR <i>{{vm.detailedData.name}}</i></h3>
         
       </div>
       <div class="modal-body">
         <form name="form.availabilityForm" class="col-sm-12" novalidate>
-        	<span style="color:brown;">All Fields marked with * are mandatory.</span>
+        	<!--<span style="color:brown;">All Fields marked with * are mandatory.</span>-->
         <div class="form-group" style="margin-top:10px;"><label class="required">Name</label><input class="form-control required" placeholder="Your name" type="text" ng-model="vm.availabilityForm.name" name="name" required>
           <span style="color:brown;" ng-show="(form.availabilityForm.name.$touched || vm.submitted) && form.availabilityForm.name.$invalid">Name is mandatory.</span>
       	</div>
@@ -18,8 +18,13 @@
             <div style="color:brown;" ng-show="(form.availabilityForm.bookingDate.$touched || vm.submitted) && form.availabilityForm.bookingDate.$invalid">Booking Date is mandatory.</div>
         </div>
 
-          <div class="form-group"><label class="required">Message</label><textarea class="form-control" placeholder="Your message here.." ng-model="vm.availabilityForm.message" name="message" required></textarea>
-          	<span style="color:brown;" ng-show="(form.availabilityForm.message.$touched || vm.submitted) && form.availabilityForm.message.$invalid">Message is mandatory.</span>
+          <div class="form-group" style="width:50%"><label>Occassion</label><input class="form-control" placeholder="Occassion(Event)" ng-model="vm.availabilityForm.occassion" name="occassion"></input>          	
+          	<!--<span style="color:brown;" ng-show="(form.availabilityForm.message.$touched || vm.submitted) && form.availabilityForm.message.$invalid">Message is mandatory.</span>-->
+          </div>
+          
+           <div class="form-group" style="width:50%"><label class="required">Gathering</label><input class="form-control" placeholder="Number of Guests" ng-model="vm.availabilityForm.gathering" name="gathering" required ng-pattern="/^[0-9]{1,4}$/"></input>
+          	<span style="color:brown;" ng-show="(form.availabilityForm.gathering.$touched || vm.submitted) && form.availabilityForm.gathering.$invalid">Gathering is mandatory.</span>
+          	<span style="color:brown;" ng-show="form.availabilityForm.gathering.$touched && form.availabilityForm.gathering.$error.pattern">Gathering should be a number</span>
           </div>
 
           <div class="form-group"><label>E-Mail</label><input class="form-control email" placeholder="email@you.com (so that we can contact you)" type="email" name="email" ng-model="vm.availabilityForm.email" ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
