--- a/app/views/login/signin.html
+++ b/app/views/login/signin.html
@@ -14,13 +14,13 @@
 								<hr>
 								<div class="text-center">OR</div>
       		<hr>
-        <form name="form.signinForm" class="col-sm-12" novalidate>
+        <form name="form.signinForm" ng-submit="vm.onLogin()" class="col-sm-12" novalidate>
         	
-        <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.signinForm.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
+        <div class="form-group" style="margin-top:10px;"><label class="required">Email</label><input class="form-control required" placeholder="Your email address" type="email" ng-model="vm.email" name="email" required ng-pattern="/^[^\s@]+@[^\s@]+\.[^\s@]{2,}$/">
           <span style="color:brown;" ng-show="(form.contactForm.name.$touched || vm.submitted) && form.contactForm.name.$invalid">Name is mandatory.</span>
       	</div>
 
-          <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.signin.password" name="password" required></input>
+          <div class="form-group"><label class="required">Password</label><input class="form-control required" placeholder="Your password" type="password" ng-model="vm.password" name="password" required></input>
           	<span style="color:brown;" ng-show="(form.contactForm.message.$touched || vm.submitted) && form.contactForm.message.$invalid">Message is mandatory.</span>
           </div>
 		
@@ -28,7 +28,7 @@
 			<a href="javascript:void(0)" data-ng-click="vm.showfgtpwdPopup();">Forgot Password?</a>
 		</div>
 		<div>	
-          <a href="#" class="btn btn-login">LOG IN</a>
+          <button type="submit" class="pure-button pure-input-1 pure-button-primary">Log In</button>
 </div>
 		<div class="text-center mTop10">
       	New to LePartycious ? <a href="javascript:void(0)" class="join-us-link" data-ng-click="vm.showSignUpPopup();">JOIN US</a>
