--- a/app/views/data/data.html
+++ b/app/views/data/data.html
@@ -44,13 +44,19 @@
 							<div class="pamphlet-body">
 								<div class="pamphlet-title col-xs-12 text-center">
 									<div class="row">
-									<div class="col-xs-8 text-left pamphlet-title-desc"><div>{{result.name}}</div><span class="pamphlet-title-city">{{result.locality}}</span>
-									<span class="venue-gathering pull-right" ng-if="vm.selectedCategory == 'VENUE'"><span class="fa fw fa-users"></span><span class="venue-gathering-range theme-color"> {{result.minCapacity}}-{{result.maxCapacity}}</span></span>
+									<div class="col-xs-8 text-left pamphlet-title-desc" ng-if="vm.selectedCategory == 'VENUE'"><div title="{{result.name}}, {{result.locality}}">{{result.name}}, {{result.locality}}</div><!--<span class="pamphlet-title-city">{{result.locality}}</span>-->
+									<div class="venue-gathering"><span class="venue-capacity-heading">SEATING CAPACITY</span><span class="venue-gathering-range"> {{result.minCapacity}}-{{result.maxCapacity}}</span></div>
+<!--
 									<span class="caterer-category veg-only pull-right" ng-if="vm.selectedCategory == 'CATERER' && result.isPureVeg"><span class="fa fw fa-dot-circle-o"></span><span class="caterer-category-veg"> veg only</span></span>
-									<span class="caterer-category veg-nonveg pull-right" ng-if="vm.selectedCategory == 'CATERER' && !result.isPureVeg"><span class="fa fw fa-dot-circle-o"></span><span class="caterer-category-nonveg"> veg/non-veg</span></span>
+									<span class="caterer-category veg-nonveg pull-right" ng-if="vm.selectedCategory == 'CATERER' && !result.isPureVeg"><span class="fa fw fa-dot-circle-o"></span><span class="caterer-category-nonveg"> veg/non-veg</span></span>-->
+
 									
 									</div>
-									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px"><div>Starts from</div><span class="fa fa-fw fa-inr theme-color"></span><span class="pamphlet-title-rate theme-color">{{result.startingPrice}}</span></div>
+									<div class="col-xs-8 text-left pamphlet-title-desc" ng-if="vm.selectedCategory != 'VENUE'"><div>{{result.name}}</div><span class="pamphlet-title-city">{{result.locality}}</span>
+									
+									</div>
+									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px" ng-if="vm.selectedCategory == 'CATERER' || vm.selectedCatgory == 'VENUE'"><div class="pamphlet-plate-price">PRICE PER PLATE</div><span class="fa fa-fw fa-inr"></span><span class="pamphlet-title-rate"><!--{{result.startingPrice}}-->400</span></div>
+									<div class="col-xs-4 text-left pamphlet-title-price border-left-1px" ng-if="vm.selectedCategory != 'CATERER' && vm.selectedCatgory != 'VENUE'"><div class="pamphlet-plate-price">STARTS FROM</div><span class="fa fa-fw fa-inr"></span><span class="pamphlet-title-rate">{{result.startingPrice}}</span></div>
 								</div>
 								</div>
 							</div>
