--- a/app/views/data/filters.html
+++ b/app/views/data/filters.html
@@ -1,7 +1,10 @@
 <div>	
 		<div class="ribbon-search-button form-group text-center">
-			<button class="btn btn-lg btn-default filter-btn" ng-click="vm.filterResults();">Filter</button>
-			<button class="btn btn-lg btn-default reset-btn"  ng-click="vm.resetFilters();">Reset</button>	
+			<!--<button class="btn btn-lg btn-default filter-btn" ng-click="vm.filterResults();">Filter</button>
+			<button class="btn btn-lg btn-default reset-btn"  ng-click="vm.resetFilters();">Reset</button>-->
+			
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent filter-btn" ng-click="vm.filterResults();">Filter</button>
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect reset-btn" ng-click="vm.resetFilters();">Reset</button>	
 		</div>
 	<div data-ng-include="'views/data/filterContent.html'" ></div>
 
