--- a/app/views/ribbon/ribbon.html
+++ b/app/views/ribbon/ribbon.html
@@ -3,8 +3,11 @@
 <div id='ribbonContainer' data-ng-class="vm.openFilterRibbon ? 'animate' : ''">
 	<div id="ribbonHeader"></div>
 	<div class="ribbon-search-button form-group text-center ribbonSpecificStyling">
-		<button class="btn btn-lg btn-default filter-btn" ng-click="vm.filterResults();vm.filterRibbonButtonHandler();">Filter</button>
-		<button class="btn btn-lg btn-default reset-btn"  ng-click="vm.resetFilters();">Reset</button>			
+		<!--<button class="btn btn-lg btn-default filter-btn" ng-click="vm.filterResults();vm.filterRibbonButtonHandler();">Filter</button>
+		<button class="btn btn-lg btn-default reset-btn"  ng-click="vm.resetFilters();">Reset</button>	-->
+		
+		<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent filter-btn" ng-click="vm.filterResults();vm.filterRibbonButtonHandler();">Filter</button>
+			<button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect reset-btn" ng-click="vm.resetFilters();">Reset</button>			
 	</div>
 <div id='ribbonFilterScrollview'>
 	<div id='ribbonFilterViewport'>
