--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -27,7 +27,7 @@
 		</form>
 		<!-- Sub Category Carousel -->
 		<div class="subcategory-carousel">
-			<div class="swiper-container subcategory-swiper-container" data-ng-repeat="(key,value) in vm.subCategoriesMap" ng-class="'{{key}}'" data-ng-if="vm.subCategorySelected == key" swiper-carousel effect="slide" grab-cursor="false" speed="500" slides-per-view="3" pagination="{{key}}.subcategory-swiper-pagination" pagination-clickable="true" autoplay="2000" space-between="10" breakpoints="vm.subcategorySwiperBrkpoints">
+			<div class="swiper-container subcategory-swiper-container" data-ng-repeat="(key,value) in vm.subCategoriesMap" ng-class="'{{key}}'" data-ng-if="vm.subCategorySelected == key" swiper-carousel effect="slide" grab-cursor="false" speed="500" slides-per-view="3" pagination="{{key}}.subcategory-swiper-pagination" pagination-clickable="true" auto-play="2000" space-between="10" breakpoints="vm.subcategorySwiperBrkpoints">
 				<!-- Additional required wrapper -->
 				<div class="swiper-wrapper subcategory-swiper-wrapper">
 					<!-- Slides -->
@@ -166,7 +166,7 @@
 			
 		
 		<!-- Applying swiper Carousel -->
-		<div class="swiper-container customerssay-swiper-container" swiper-carousel speed="300" space-between="0" autoplay="3000" effect="slide" pagination="customerssay-swiper-pagination" pagination-type="bullets" pagination-clickable="true">
+		<div class="swiper-container customerssay-swiper-container" swiper-carousel speed="300" space-between="0" auto-play="3000" effect="slide" pagination="customerssay-swiper-pagination" pagination-type="bullets" pagination-clickable="true">
 		<!-- Additional required wrapper -->
 		<div class="swiper-wrapper customerssay-swiper-wrapper">
 			<!-- Slides -->
