--- a/app/views/home/home.html
+++ b/app/views/home/home.html
@@ -1,4 +1,5 @@
-<section class="row venue_includes">
+<section class="row vendors-subcategories">
+	<div class="venue_includes clearfix">
 	<div class="col-xs-12">
 		<h2>WE PLAN YOUR MEMORIES</h2>
 		<hr>
@@ -53,6 +54,7 @@
 
 			</div>
 		</div>
+	</div>
 	</div>
 </section>
 
